feature(signup) : direct link

--- a/index.html
+++ b/index.html
@@ -52,14 +52,14 @@
 											<input class="form-control form-control-lg" type="password" name="password" placeholder="Enter password" />
 										</div>
 										<div class="d-grid gap-2 mt-3">
-											<a href="index.html" class="btn btn-lg btn-primary">Register</a>
+											<a href="404.html" class="btn btn-lg btn-primary">Register</a>
 										</div>
 									</form>
 								</div>
 							</div>
 						</div>
 						<div class="text-center mb-3">
-							Sudah Punya Akun? <a href="pages-sign-in.html">Log In</a>
+							Sudah Punya Akun? <a href="pmb.ulbi.ac.id">Log In</a>
 						</div>
 					</div>
 				</div>
