--- a/index.html
+++ b/index.html
@@ -14,58 +14,75 @@
 
 	<link rel="canonical" href="https://demo-basic.adminkit.io/pages-sign-up.html" />
 
-	<title>Sign Up | AdminKit Demo</title>
+	<title>PMB ULBI 2023</title>
 
 	<link href="static/css/app.css" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 
 <body>
-	<main class="d-flex w-100">
-		<div class="container d-flex flex-column">
-			<div class="row vh-100">
-				<div class="col-sm-10 col-md-8 col-lg-6 col-xl-5 mx-auto d-table h-100">
-					<div class="d-table-cell align-middle">
 
-						<div class="text-center mt-4">
-							<img src="static/img/photos/Logo Ulbi Wide Dark.png" alt="" style="width: 250px; margin-bottom: 20px;">
-							<h1 class="h2"><b>Get started</b></h1>
-							<p class="lead">
-								Start creating the best possible user experience for you customers.
-							</p>
+	<!-- Navbar Start -->
+
+	<!-- Navbar End -->
+
+	<section class="vh-100 bg-image"
+		style="background-image: url('static/img/photos/ulbi\ bg.png'); background-size: cover; background-repeat: no-repeat; background-position: center;">
+		<div class="mask d-flex align-items-center h-100 gradient-custom-3">
+			<div class="container h-100">
+			<div class="row d-flex justify-content-center align-items-center h-100">
+				<div class="col-12 col-md-9 col-lg-7 col-xl-6">
+				<h1 style="color: white; text-align: center;"><b>PENERIMAAN MAHASISWA BARU TAHUN AKADEMIK 2023/2024</b></h1>
+				<h1 style="color: white; text-align: center; margin-bottom: 30px;"><b>#EnjoyTheLearningExperience</b></h1>
+				<div class="card" style="border-radius: 15px;">
+					<div class="card-body p-5">
+					<h2 class="text-uppercase text-center mb-5"><b>Buat Akun Baru</b></h2>
+
+					<form>
+
+						<div class="form-outline mb-4">
+						<label class="form-label" for="form3Example1cg">Nama Lengkap</label>
+						<input type="text" id="form3Example1cg" class="form-control form-control-lg" placeholder="Inputkan Nama Lengkap" />
 						</div>
 
-						<div class="card">
-							<div class="card-body">
-								<div class="m-sm-3">
-									<form>
-										<div class="mb-3">
-											<label class="form-label">Full name</label>
-											<input class="form-control form-control-lg" type="text" name="name" placeholder="Enter your name" />
-										</div>
-										<div class="mb-3">
-											<label class="form-label">Email</label>
-											<input class="form-control form-control-lg" type="email" name="email" placeholder="Enter your email" />
-										</div>
-										<div class="mb-3">
-											<label class="form-label">Password</label>
-											<input class="form-control form-control-lg" type="password" name="password" placeholder="Enter password" />
-										</div>
-										<div class="d-grid gap-2 mt-3">
-											<a href="404.html" class="btn btn-lg btn-primary">Register</a>
-										</div>
-									</form>
-								</div>
-							</div>
+						<div class="form-outline mb-4">
+						<label class="form-label" for="form3Example3cg">Email</label>
+						<input type="email" id="form3Example3cg" class="form-control form-control-lg" placeholder="Inputkan Email" />
 						</div>
-						<div class="text-center mb-3">
-							Sudah Punya Akun? <a href="pmb.ulbi.ac.id">Log In</a>
+
+						<div class="form-outline mb-4">
+						<label class="form-label" for="form3Example4cg">No Handphone/WhatsApp</label>
+						<input type="text" id="form3Example4cg" class="form-control form-control-lg" placeholder="Inputkan No Handphone/WhatsApp" />
 						</div>
+
+						<div class="form-outline mb-4">
+							<label class="form-label" for="form3Example4cdg">Asal Sekolah</label>
+							<select id="form3Example4cdg" class="form-select form-select-lg">
+								<option value="">Pilih Asal Sekolah</option>
+								<option value="school1">School 1</option>
+								<option value="school2">School 2</option>
+								<option value="school3">School 3</option>
+								<!-- Add more schools as needed -->
+							</select>
+						</div>
+
+						<div class="d-flex justify-content-center">
+							<button type="button" class="btn btn-primary" style="width: 100%; height: 40px; border-radius: 25px;">DAFTAR</button>
+						</div>
+
+						<p class="text-center text-muted mt-3 mb-0">Sudah Punya Akun? <a href="pmb.ulbi.ac.id"
+							class="fw-bold text-body">Login Disini</a></p>
+
+					</form>
+
 					</div>
 				</div>
+				</div>
+			</div>
 			</div>
 		</div>
-	</main>
+		</section>
+	  
 
 	<script src="static/js/app.js"></script>
 
