feature(formdaftar) : footer form regis

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 	  </nav>
 	<!-- Navbar End -->
 
+	<!-- Main Content Start -->
 	<section class="vh-100 bg-image"
 		style="background-image: url('static/img/photos/ulbi\ bg.png'); background-size: cover; background-repeat: no-repeat; background-position: center;">
 		<div class="mask d-flex align-items-center h-100 gradient-custom-3">
@@ -98,14 +99,20 @@
 					
 						<p class="text-center text-muted mt-3 mb-0">Sudah Punya Akun? <a href="pmb.ulbi.ac.id" class="fw-bold text-body">Login Disini</a></p>
 					</form>
-
 					</div>
 				</div>
 				</div>
 			</div>
 			</div>
 		</div>
-		</section>
+	</section>
+	<!-- Main Content End -->
+
+	<!-- Footer Start -->
+	<footer class="py-3" style="background-color: #EA5329;">
+		<p class="text-center mt-3" style="color: white;"><b>Marketing And Admission Directorate </b>Copyright©2023</p>
+	  </footer>
+	<!-- Footer End -->
 	  
 	<script>
 		document.getElementById('form3Example4cdg').addEventListener('change', function () {
