--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 	<link rel="canonical" href="https://demo-basic.adminkit.io/pages-sign-up.html" />
 
-	<title>PMB ULBI 2023</title>
+	<title>PENDAFTARAN | PMB ULBI 2023</title>
 
 	<link href="static/css/app.css" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
