feature(inputsekolahlain) : link modul index.js

--- a/index.html
+++ b/index.html
@@ -118,18 +118,7 @@
 		<p class="text-center mt-3" style="color: white;"><b>Marketing And Admission Directorate </b>Copyright©2023</p>
 	  </footer>
 	<!-- Footer End -->
-	  
-	<script>
-		document.getElementById('form3Example4cdg').addEventListener('change', function () {
-			var selectedOption = this.value;
-			if (selectedOption === 'other') {
-				document.getElementById('manualSchoolInput').style.display = 'block'; // Menampilkan input sekolah manual
-			} else {
-				document.getElementById('manualSchoolInput').style.display = 'none'; // Sembunyikan input sekolah manual
-			}
-		});
-	</script>
-
+	<script src="static/js/index.js" type="module"></script>
 	<script src="static/js/app.js"></script>
 
 </body>
