add(dropdown) : create input kota dan province

--- a/index.html
+++ b/index.html
@@ -62,17 +62,17 @@
 						<!-- Input Nama Lengkap -->
 						<div class="form-outline mb-4">
 							<label class="form-label" for="form3Example1cg">Nama Lengkap</label>
-							<input type="text" id="form3Example1cg" class="form-control form-control-lg" placeholder="Inputkan Nama Lengkap" />
+							<input type="text" id="form3Example1cg" class="form-control form-control-lg" placeholder="Masukkan Nama Lengkap" />
 						</div>
 						<!-- Input Email -->
 						<div class="form-outline mb-4">
 							<label class="form-label" for="form3Example3cg">Email</label>
-							<input type="email" id="form3Example3cg" class="form-control form-control-lg" placeholder="Inputkan Email" />
+							<input type="email" id="form3Example3cg" class="form-control form-control-lg" placeholder="Masukkan Email" />
 						</div>
 						<!-- Input Nomor Handphone/WhatsApp -->
 						<div class="form-outline mb-4">
 							<label class="form-label" for="form3Example4cg">No Handphone/WhatsApp</label>
-							<input type="text" id="form3Example4cg" class="form-control form-control-lg" placeholder="Inputkan No Handphone/WhatsApp" />
+							<input type="text" id="form3Example4cg" class="form-control form-control-lg" placeholder="Masukkan No Handphone/WhatsApp" />
 						</div>
 						<!-- Input Asal Sekolah -->
 						<div class="form-outline mb-4">
@@ -89,7 +89,25 @@
 						<div id="manualSchoolInput" style="display: none;"> <!-- Form input sekolah manual -->
 							<div class="form-outline mb-4">
 								<label class="form-label" for="manualSchool">Sekolah Manual</label>
-								<input type="text" id="manualSchool" class="form-control form-control-lg" placeholder="Inputkan Nama Sekolah" />
+								<input type="text" id="manualSchool" class="form-control form-control-lg" />
+							</div>
+						</div>
+
+						<div id="manualCityInput" style="display: none;">
+							<div class="form-outline mb-4">
+								<label class="form-label" for="manualCity">Kota Asal Sekolah</label>
+								<select id="kota-sekolah" class="form-select form-select-lg" >
+									<option disabled value="">Pilih Kota Asal Sekolah</option>
+								</select>
+							</div>
+						</div>
+
+						<div id="manualProvinceInput" style="display: none;">
+							<div class="form-outline mb-4">
+								<label class="form-label" for="manualProvince">Provinsi Asal Sekolah</label>
+								<select id="provinsi-sekolah" class="form-select form-select-lg" >
+									<option disabled value="">Pilih Provinsi Asal Sekolah</option>
+								</select>
 							</div>
 						</div>
 					
