--- a/index.html
+++ b/index.html
@@ -62,22 +62,22 @@
 						<!-- Input Nama Lengkap -->
 						<div class="form-outline mb-4">
 							<label class="form-label" for="form3Example1cg">Nama Lengkap</label>
-							<input type="text" id="form3Example1cg" class="form-control form-control-lg" placeholder="Masukkan Nama Lengkap" />
+							<input type="text" id="NamaLengkap" class="form-control form-control-lg" placeholder="Masukkan Nama Lengkap" />
 						</div>
 						<!-- Input Email -->
 						<div class="form-outline mb-4">
 							<label class="form-label" for="form3Example3cg">Email</label>
-							<input type="email" id="form3Example3cg" class="form-control form-control-lg" placeholder="Masukkan Email" />
+							<input type="email" id="Email" class="form-control form-control-lg" placeholder="Masukkan Email" />
 						</div>
 						<!-- Input Nomor Handphone/WhatsApp -->
 						<div class="form-outline mb-4">
 							<label class="form-label" for="form3Example4cg">No Handphone/WhatsApp</label>
-							<input type="text" id="form3Example4cg" class="form-control form-control-lg" placeholder="Masukkan No Handphone/WhatsApp" />
+							<input type="text" id="NoHandphone" class="form-control form-control-lg" placeholder="Masukkan No Handphone/WhatsApp" />
 						</div>
 						<!-- Input Asal Sekolah -->
 						<div class="form-outline mb-4">
 							<label class="form-label" for="form3Example4cdg">Asal Sekolah</label>
-							<select id="form3Example4cdg" class="form-select form-select-lg">
+							<select id="AsalSekolah" class="form-select form-select-lg">
 								<option value="">Pilih Asal Sekolah</option>
 								<option value="school1">School 1</option>
 								<option value="school2">School 2</option>
