add(forminput) : perbaikan form

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 						<div id="manualSchoolInput" style="display: none;"> <!-- Form input sekolah manual -->
 							<div class="form-outline mb-4">
 								<label class="form-label" for="manualSchool">Sekolah Manual</label>
-								<input type="text" id="manualSchool" class="form-control form-control-lg" />
+								<input type="text" id="manualSchool" class="form-control form-control-lg" placeholder="Masukkan Nama Sekolah"/>
 							</div>
 						</div>
 
