add(form) : penyesuaian form

--- a/index.html
+++ b/index.html
@@ -78,10 +78,7 @@
 						<div class="form-outline mb-4">
 							<label class="form-label" for="form3Example4cdg">Asal Sekolah</label>
 							<select id="AsalSekolah" class="form-select form-select-lg">
-								<option value="">Pilih Asal Sekolah</option>
-								<option value="school1">School 1</option>
-								<option value="school2">School 2</option>
-								<option value="school3">School 3</option>
+								<option disabled value="">Pilih Asal Sekolah</option>
 								<option value="other">Sekolah Lainnya</option> <!-- Opsi "Sekolah Lainnya" -->
 							</select>
 						</div>
