--- a/index.html
+++ b/index.html
@@ -78,11 +78,11 @@
 						<div class="form-outline mb-4">
 							<label class="form-label" for="form3Example4cdg">Asal Sekolah</label>
 							<select id="AsalSekolah" class="form-select form-select-lg">
-								<option disabled value="">Pilih Asal Sekolah</option>
+								<option value="">Pilih Asal Sekolah</option>
 								<option value="other">Sekolah Lainnya</option> <!-- Opsi "Sekolah Lainnya" -->
 							</select>
 						</div>
-						
+
 						<!-- Inputan Asal Sekolah jika ada sekolah belum terdaftar di database -->
 						<div id="manualSchoolInput" style="display: none;"> <!-- Form input sekolah manual -->
 							<div class="form-outline mb-4">
