--- a/index.html
+++ b/index.html
@@ -76,11 +76,16 @@
 						</div>
 						<!-- Input Asal Sekolah -->
 						<div class="form-outline mb-4">
-							<label class="form-label" for="form3Example4cdg">Asal Sekolah</label>
-							<select id="AsalSekolah" class="form-select form-select-lg">
-								<option value="">Pilih Asal Sekolah</option>
-								<option value="other">Sekolah Lainnya</option> <!-- Opsi "Sekolah Lainnya" -->
-							</select>
+							<label class="form-label" for="form3Example4cg">Asal Sekolah</label>
+							<input type="text" id="AsalSekolah" class="form-control form-control-lg" placeholder="Masukkan Asal Sekolah" />
+						</div>
+
+						<!-- Checkbox untuk menampilkan inputan sekolah lainnya -->
+						<div class="form-check mb-4">
+							<input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+							<label class="form-check-label" for="flexCheckDefault">
+							  Input Sekolah Lain
+							</label>
 						</div>
 
 						<!-- Inputan Asal Sekolah jika ada sekolah belum terdaftar di database -->
