fix(bug) : perbaikan form

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 						</div>
 						<!-- Input Asal Sekolah -->
 						<div class="form-outline mb-4">
-							<label class="form-label" for="form3Example4cg">Asal Sekolah</label>
+							<label class="form-label" for="AsalSekolah">Asal Sekolah</label>
 							<input type="text" id="AsalSekolah" class="form-control form-control-lg" placeholder="Masukkan Asal Sekolah" />
 						</div>
 
