--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 						</div>
 					
 						<div class="d-flex justify-content-center">
-							<button type="button" class="btn btn-primary" style="width: 100%; height: 40px; border-radius: 25px; background-color: #00277F;"><b>DAFTAR</b></button>
+							<button type="button" class="btn btn-primary" style="width: 100%; height: 40px; border-radius: 25px; background-color: #00277F;"><b>BUAT AKUN</b></button>
 						</div>
 					
 						<p class="text-center text-muted mt-3 mb-0">Sudah Punya Akun? <a href="pmb.ulbi.ac.id" class="fw-bold text-body">Login Disini</a></p>
