fix(bugsekolah) : perbaikan suggestion get sekolah

--- a/index.html
+++ b/index.html
@@ -19,6 +19,31 @@
 	<link href="static/css/app.css" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
+<style>
+	.suggestions {
+  border: 1px solid #ccc;
+  max-height: 150px;
+  overflow-y: auto;
+  background-color: #fff;
+  display: none; /* Sembunyikan saran awalnya */
+}
+
+.suggestions .school {
+  margin: 5px 0;
+  cursor: pointer;
+  padding: 5px;
+  border: 1px solid #ddd;
+  background-color: #f5f5f5;
+  transition: background-color 0.3s;
+}
+
+.suggestions .school:hover {
+  background-color: #e0e0e0;
+}
+
+
+
+</style>
 
 <body>
 
@@ -77,9 +102,11 @@
 						<!-- Input Asal Sekolah -->
 						<div class="form-outline mb-4">
 							<label class="form-label" for="AsalSekolah">Asal Sekolah</label>
-							<select id="AsalSekolah" class="form-select">
+							<!-- <select id="AsalSekolah" class="form-select">
 								<option disabled value="">Pilih Asal Sekolah</option>
-							</select>
+							</select> -->
+							<input id="AsalSekolah" type="text" class="form-control" placeholder="AsalSekolah" />
+                              <div id="AsalSekolah-suggestions" class="suggestions"></div>
 						</div>
 
 						<!-- Checkbox untuk menampilkan inputan sekolah lainnya -->
