style(css&comment) : rapihin css js dan komentar

--- a/index.html
+++ b/index.html
@@ -17,34 +17,9 @@
 	<title>PENDAFTARAN | PMB ULBI 2023</title>
 
 	<link href="static/css/app.css" rel="stylesheet">
+	<link rel="stylesheet" href="static/css/style.css">
 	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
-<style>
-	.suggestions {
-  border: 1px solid #ccc;
-  max-height: 150px;
-  overflow-y: auto;
-  background-color: #fff;
-  display: none; /* Sembunyikan saran awalnya */
-}
-
-.suggestions .school {
-  margin: 5px 0;
-  cursor: pointer;
-  padding: 5px;
-  border: 1px solid #ddd;
-  background-color: #f5f5f5;
-  transition: background-color 0.3s;
-}
-
-.suggestions .school:hover {
-  background-color: #e0e0e0;
-}
-
-
-
-</style>
-
 <body>
 
 	<!-- Navbar Start -->
@@ -105,7 +80,7 @@
 							<!-- <select id="AsalSekolah" class="form-select">
 								<option disabled value="">Pilih Asal Sekolah</option>
 							</select> -->
-							<input id="AsalSekolah" type="text" class="form-control" placeholder="AsalSekolah" />
+							<input id="AsalSekolah" type="text" class="form-control" placeholder="Masukkan Asal Sekolah" />
                               <div id="AsalSekolah-suggestions" class="suggestions"></div>
 						</div>
 
