add(suggestion) : create form input suggestion provinsi

--- a/index.html
+++ b/index.html
@@ -77,9 +77,6 @@
 						<!-- Input Asal Sekolah -->
 						<div class="form-outline mb-4">
 							<label class="form-label" for="AsalSekolah">Asal Sekolah</label>
-							<!-- <select id="AsalSekolah" class="form-select">
-								<option disabled value="">Pilih Asal Sekolah</option>
-							</select> -->
 							<input id="AsalSekolah" type="text" class="form-control" placeholder="Masukkan Asal Sekolah" />
                               <div id="AsalSekolah-suggestions" class="suggestions"></div>
 						</div>
@@ -102,10 +99,13 @@
 
 						<div id="manualProvinceInput" style="display: none;">
 							<div class="form-outline mb-4">
-								<label class="form-label" for="manualProvince">Provinsi Asal Sekolah</label>
+								<!-- <label class="form-label" for="manualProvince">Provinsi Asal Sekolah</label>
 								<select id="provinsi-sekolah" class="form-select form-select-lg" >
 									<option disabled value="">Pilih Provinsi Asal Sekolah</option>
-								</select>
+								</select> -->
+								<label class="form-label" for="manualProvince">Provinsi Asal Sekolah</label>
+								<input id="provinsi-sekolah" type="text" class="form-control" placeholder="Masukkan Provinsi Asal Sekolah" />
+								  <div id="ProvinsiSekolah-suggestions" class="suggestions"></div>
 							</div>
 						</div>
 
