add(form) : add form input suggestion untuk kota

--- a/index.html
+++ b/index.html
@@ -99,10 +99,6 @@
 
 						<div id="manualProvinceInput" style="display: none;">
 							<div class="form-outline mb-4">
-								<!-- <label class="form-label" for="manualProvince">Provinsi Asal Sekolah</label>
-								<select id="provinsi-sekolah" class="form-select form-select-lg" >
-									<option disabled value="">Pilih Provinsi Asal Sekolah</option>
-								</select> -->
 								<label class="form-label" for="manualProvince">Provinsi Asal Sekolah</label>
 								<input id="provinsi-sekolah" type="text" class="form-control" placeholder="Masukkan Provinsi Asal Sekolah" />
 								  <div id="ProvinsiSekolah-suggestions" class="suggestions"></div>
@@ -112,9 +108,8 @@
 						<div id="manualCityInput" style="display: none;">
 							<div class="form-outline mb-4">
 								<label class="form-label" for="manualCity">Kota Asal Sekolah</label>
-								<select id="kota-sekolah" class="form-select form-select-lg" >
-									<option disabled value="">Pilih Kota Asal Sekolah</option>
-								</select>
+								<input id="kota-sekolah" type="text" class="form-control" placeholder="Masukkan Kota Asal Sekolah" />
+								  <div id="KotaSekolah-suggestions" class="suggestions"></div>
 							</div>
 						</div>
 					
