--- a/index.html
+++ b/index.html
@@ -137,6 +137,7 @@
 	<!-- Footer End -->
 
 	<script src="static/js/index.js" type="module"></script>
+	<script src="static/js/template/style.js" type="module"></script>
 	<script src="static/js/app.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
