--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 			<div class="row d-flex justify-content-center align-items-center h-100">
 				<div class="col-12 col-md-9 col-lg-7 col-xl-6" style="padding: 30px;">
 				<h1 style="color: white; text-align: center;"><b>PENERIMAAN MAHASISWA BARU TAHUN AKADEMIK 2023/2024</b></h1>
-				<h1 style="color: white; text-align: center; margin-bottom: 30px;"><b>#EnjoyTheLearningExperience</b></h1>
+				<h1 style="color: white; text-align: center; margin-bottom: 30px;"><b>#KampusBUMN</b></h1>
 				<div class="card" style="border-radius: 15px;">
 					<div class="card-body p-5">
 					<h2 class="text-uppercase text-center mb-5"><b>Buat Akun Baru</b></h2>
