add(comment) : add comment input

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 							</div>
 						</div>
 
-						<div id="manualProvinceInput" style="display: none;">
+						<div id="manualProvinceInput" style="display: none;"> <!-- Form input provinsi asal sekolah -->
 							<div class="form-outline mb-4">
 								<label class="form-label" for="manualProvince">Provinsi Asal Sekolah</label>
 								<input id="provinsi-sekolah" type="text" class="form-control" placeholder="Masukkan Provinsi Asal Sekolah" />
@@ -105,7 +105,7 @@
 							</div>
 						</div>
 
-						<div id="manualCityInput" style="display: none;">
+						<div id="manualCityInput" style="display: none;"> <!-- Form input kota asal sekolah -->
 							<div class="form-outline mb-4">
 								<label class="form-label" for="manualCity">Kota Asal Sekolah</label>
 								<input id="kota-sekolah" type="text" class="form-control" placeholder="Masukkan Kota Asal Sekolah" />
