fix(pendaftaran): disabled kolom asal sekolah

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 						<div id="manualCityInput" style="display: none;"> <!-- Form input kota asal sekolah -->
 							<div class="form-outline mb-4">
 								<label class="form-label" for="manualCity">Kota Asal Sekolah</label>
-								<input id="kota-sekolah" type="text" class="form-control" placeholder="Masukkan Kota Asal Sekolah" />
+								<input id="kota-sekolah" type="text" class="form-control" placeholder="Masukkan Kota Asal Sekolah" disabled/>
 								  <div id="KotaSekolah-suggestions" class="suggestions"></div>
 							</div>
 						</div>
