fix(pendaftaran): perubahan navbar agar support toogle hamburger

--- a/index.html
+++ b/index.html
@@ -24,26 +24,35 @@
 
 	<!-- Navbar Start -->
 	<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #EA5329;">
-		<div class="collapse navbar-collapse" id="navbarSupportedContent">
-		  <ul class="navbar-nav mr-auto ">
-			<li class="nav-item active">
-			  <a class="nav-link" href="https://admission.ulbi.ac.id/" style="color: white; margin-left: 500px; margin-right: 20px;"><b>PMB 2023</b></a>
-			</li>
-			<li class="nav-item">
-			  <a class="nav-link" href="#" style="color: white;">Home</a>
-			</li>
-			<li class="nav-item">
-				<a class="nav-link" href="http://ulbi.ac.id/" style="color: white; margin-left: 20px;">Conncet To ULBI</a>
-			</li>
-			<li class="nav-item">
-				<a class="nav-link" href="https://enroll.ulbi.ac.id/Informasi/Call_Us" style="color: white; margin-left: 20px;">Hubungi Kami</a>
-			</li>
-			<li class="nav-item">
-				<a class="nav-link" href="https://wa.me/628112267778?text=Hallo%20saya%20ingin%20mengetahui%20tentang%20kampus%20lebih%20dalam" style="color: white; margin-left: 20px;">FAQ</a>
-			</li>
-		  </ul>
+		<div class="container">
+			<a class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+				aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</a>
+			<div class="collapse navbar-collapse" id="navbarSupportedContent">
+				<ul class="navbar-nav mx-auto">
+					<li class="nav-item active">
+						<a class="nav-link" href="https://admission.ulbi.ac.id/" style="color: white;"><b>PMB 2023</b></a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#" style="color: white;">Home</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="http://ulbi.ac.id/" style="color: white;">Connect To ULBI</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="https://enroll.ulbi.ac.id/Informasi/Call_Us" style="color: white;">Hubungi
+							Kami</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link"
+							href="https://wa.me/628112267778?text=Hallo%20saya%20ingin%20mengetahui%20tentang%20kampus%20lebih%20dalam"
+							style="color: white;">FAQ</a>
+					</li>
+				</ul>
+			</div>
 		</div>
-	  </nav>
+	</nav>
 	<!-- Navbar End -->
 
 	<!-- Main Content Start -->
