--- a/akunregistrasi.html
+++ b/akunregistrasi.html
@@ -119,8 +119,8 @@
                                 </blockquote>
           
                             <div class="box-footer no-print" style="text-align: right;">
-                                <a href="#" class="btn btn-primary" onclick="window.print()"><i class="fa fa-fw fa-print"></i> Print </a>
-                                <a href="https://enroll.ulbi.ac.id/Pendaftaran/masuk" class="btn btn-success" target="_blank"><i class="fa fa-login"> Login Disini</i></a>
+                                <a href="#" class="btn btn-primary"><i class="fa fa-fw fa-print"></i> Print </a>
+                                <a href="https://pmb.ulbi.ac.id" class="btn btn-success" target="_blank"><i class="fa fa-login"> Login Disini</i></a>
                             </div>
                             </div>
                           </div>
@@ -143,7 +143,7 @@
 	</footer>
 	<!-- Footer End -->
 
-	<script src="static/js/index.js" type="module"></script>
+	<script src="static/js/akunregis.js" type="module"></script>
 	<script src="static/js/template/style.js" type="module"></script>
 	<script src="static/js/app.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
