--- a/akunregistrasi.html
+++ b/akunregistrasi.html
@@ -144,7 +144,7 @@
 	<!-- Footer End -->
 
 	<script src="static/js/akunregis.js" type="module"></script>
-	<script src="static/js/template/style.js" type="module"></script>
+	<!-- <script src="static/js/template/style.js" type="module"></script> -->
 	<script src="static/js/app.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
