fix(id) : ubah id form

--- a/akunregistrasi.html
+++ b/akunregistrasi.html
@@ -79,17 +79,17 @@
                                     <tbody>
                                     <tr>
                                     <td width="150px"><p>Nama</p></td>
-                                    <td><p>: <b id="nama"></b></p></td>
+                                    <td><p>: <b id="namaMhs"></b></p></td>
                                     </tr>
             
                                     <tr>
                                     <td><p>Alamat Email</p></td>
-                                    <td><p>: <b id="email"></b></p></td>
+                                    <td><p>: <b id="emailMhs"></b></p></td>
                                     </tr>
 
                                     <tr>
                                     <td><p>No Handphone</p></td>
-                                    <td><p>: <b id="noHandphone"></b></p></td>
+                                    <td><p>: <b id="noHp"></b></p></td>
                                     </tr>
             
                                     <tr>
