fix(linkjs) : ganti link js ke file baru

--- a/akunregistrasi.html
+++ b/akunregistrasi.html
@@ -143,7 +143,7 @@
 	</footer>
 	<!-- Footer End -->
 
-	<script src="static/js/akunregis.js" type="module"></script>
+	<script src="akunregistrasi.js" type="module"></script>
 	<!-- <script src="static/js/template/style.js" type="module"></script> -->
 	<script src="static/js/app.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
