--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 							<button type="button" class="btn btn-primary" style="width: 100%; height: 40px; border-radius: 25px; background-color: #00277F;"><b>BUAT AKUN</b></button>
 						</div>
 					
-						<p class="text-center text-muted mt-3 mb-0">Sudah Punya Akun? <a href="pmb.ulbi.ac.id" class="fw-bold text-body">Login Disini</a></p>
+						<p class="text-center text-muted mt-3 mb-0">Sudah Punya Akun? <a href="https://pmb.ulbi.ac.id" class="fw-bold text-body">Login Disini</a></p>
 						<!-- <hr class="my-4">
 						<button class="btn btn-lg btn-block btn-primary" style="width: 100%; height: 40px; border-radius: 25px; background-color: #dd4b39;" type="submit"><b>Masuk dengan Akun Google</b></button> -->
 					</form>
