get password in akun registrasi

--- a/akunregistrasi.html
+++ b/akunregistrasi.html
@@ -87,6 +87,11 @@
                                     <td><p>: <b id="emailMhs"></b></p></td>
                                     </tr>
 
+									<tr>
+                                    <td><p>Password</p></td>
+                                    <td><p>: <b id="passwordMhs"></b></p></td>
+                                    </tr>
+
                                     <tr>
                                     <td><p>No Handphone</p></td>
                                     <td><p>: <b id="noHp"></b></p></td>
