add(print):feture print

--- a/akunregistrasi.html
+++ b/akunregistrasi.html
@@ -120,7 +120,7 @@
                                 </blockquote>
           
                             <div class="box-footer no-print" style="text-align: right;">
-                                <a href="#" class="btn btn-primary"><i class="fa fa-fw fa-print"></i> Print </a>
+                                <a href="#" class="btn btn-primary" onclick="window.print()"><i class="fa fa-fw fa-print"></i> Print </a>
                                 <a href="https://pmb.ulbi.ac.id" class="btn btn-success" target="_blank"><i class="fa fa-login"> Login Disini</i></a>
                             </div>
                             </div>
