fix(notelp):Format Internasional

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 						<!-- Input Nomor Handphone/WhatsApp -->
 						<div class="form-outline mb-4">
 							<label class="form-label" for="form3Example4cg">No Handphone/WhatsApp</label>
-							<input type="text" id="NoHandphone" class="form-control form-control-lg" placeholder="Masukkan No Handphone/WhatsApp" />
+							<input type="text" id="NoHandphone" class="form-control form-control-lg" placeholder="Format Internasional 628xxx" />
 						</div>
 						<!-- Input Asal Sekolah -->
 						<div class="form-outline mb-4">
