--- a/akunregistrasi.html
+++ b/akunregistrasi.html
@@ -18,6 +18,7 @@
 
 	<link href="static/css/app-regis.css" rel="stylesheet">
 	<link rel="stylesheet" href="static/css/style.css">
+	<link rel="stylesheet" href="static/css/style_akunregis.css">
 	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 <body>
